--- a/views/index/index.html
+++ b/views/index/index.html
@@ -8,9 +8,14 @@
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
+    <style>
+        h1 {
+            text-align: center;
+        }
+    </style>
 </head>
 <body>
-<h4>{{ .msg }}</h4>
+    <h1>{{ .msg }}</h1>
 </body>
 </html>
 
